[project]
name = "ace-step-mcp"
version = "0.1.0"
description = "MCP Server for ACE Step Music Generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ace-step",
    "mcp",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchcodec>=0.9.1",
    "torchvision>=0.24.1",
]

[project.scripts]
ace-step-mcp = "ace_step_mcp.server:main"
ace-step-mcp-download = "ace_step_mcp.server:download_model"

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
ace-step = { git = "https://github.com/ace-step/ACE-Step.git" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
